# QuadDrive

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DELTA_MODE_MID_SIDE_NOTES.md  README.md  Terminal Saved Output.txt  harness.sh  test_mute_normalization.txt
.github/workflows/: build.yml
ARCHIVE/2025-11-18_19-44-19_zero-latency-threshold-separated/: README.md
ARCHIVE/2025-11-18_19-44-19_zero-latency-threshold-separated/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
ARCHIVE/2025-11-18_20-04-07_mutually-exclusive-limiters-clean-default/: README.md
ARCHIVE/2025-11-18_20-04-07_mutually-exclusive-limiters-clean-default/Source/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp
ARCHIVE/build 1/Source/: juce_vst3_helper
ARCHIVE/build 2/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ARCHIVE/build 3/JUCE/: JUCEExportConfig.cmake
ARCHIVE/build 3/JUCE/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
ARCHIVE/build 3/Source/: QuadBlendDrive_vst3_helper
ARCHIVE/build_2025-11-17_01-49-26/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Assets/: README.md
Source/: CMakeLists.txt  OversamplingManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  STEVELookAndFeel.h  STEVEScope.cpp  STEVEScope.h  StereoMeter.cpp  StereoMeter.h  ThresholdMeter.cpp  ThresholdMeter.h  TransferCurveMeter.cpp  TransferCurveMeter.h  WaveformGRMeter.cpp  WaveformGRMeter.h
Source/DSP/: AdaptiveReleaseLimiter.cpp  AdaptiveReleaseLimiter.h  EnvelopeFollower.h  EnvelopeShaper.h  MicroClippingSymmetryRestorer.cpp  MicroClippingSymmetryRestorer.h  TransientPreservingEnvelope.cpp  TransientPreservingEnvelope.h
Tests/: CMakeLists.txt  DiagnosticReport.md  EnvelopeTests.cpp  FinalNullTestReport.md  FixResultsSummary.md  NullTest.cpp  README.md
scripts/: update_version.sh
